--- a/tests/02-colleges/styles.css
+++ b/tests/02-colleges/styles.css
@@ -24,8 +24,9 @@ table {
 
 th {
   padding: 10px;
-  text-align: left; }
+  text-align: left;
+  border-bottom: 1px solid #ccc; }
 
 td {
-  border-top: 1px solid #eee;
+  border-bottom: 1px dashed #ddd;
   padding: 10px; }
