--- a/tests/02-colleges/styles.scss
+++ b/tests/02-colleges/styles.scss
@@ -19,9 +19,10 @@ table {
 th {
 	padding: 10px;
 	text-align: left;
+	border-bottom: 1px solid #ccc;
 }
 
 td {
-	border-top: 1px solid #eee;
+	border-bottom: 1px dashed #ddd;
 	padding: 10px;
 }
